@@ -21,8 +21,9 @@ v0.9 [2016-]
             - replaced all "wx.wxMessageDialog()" whith "dialog.msg()" / "dialog.info()" / "dialog.question()"
             - replaced all custom checks and validations with "validate.cert()" / "validate.hub()" / "validate.cfg()" / "validate.rules()" / "validate.empty_name()" / "validate.empty_cat()" / "validate.unique_name()"
             - replaced all custom table methods with "table.hasValue()" / "table.hasKey()" / "table.getKey()" / "table.copy()"
-            - added "()" to get nr and value of listbox selection
+            - added "parse_listbox_selection()" to get nr and name of listbox selection
             - fixed known issue on rules_listbox + categories_listbox with selection id and array id
+            - changed save buttons callback manual save functions with save_changes( page )
             - changed maybe some more tiny things :)
 
     - update: "cfg/cfg.lua"  / by jrock
